--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -140,6 +140,11 @@
 		background-size : 1400px 790px;
 	}
 
+
+	#ph{
+		margin-top: 1%;
+	}
+
 	@media only screen and (min-width: 1101px) {
 		h1 {
 			font-size: 80px;
@@ -164,6 +169,7 @@
         	<input type="text" name="name" placeholder="Full Name">
         	<input type="password" name="password" placeholder="Password">
         	<input type="text" name="email" placeholder="E-mail">
+        	<input id="ph" type="text" name="phone" placeholder="Phone Number">
         	<br>
 
 
