--- a/templates/post.html
+++ b/templates/post.html
@@ -1,9 +1,187 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+	
+
+	<!-- the style for the whole page -->
+	<style>
+
+	body{
+		background-color: grey;
+	}
+
+	.story{
+		position: absolute;
+    	margin-left: 250px;
+    	top: 0px;
+    	width: 60%;
+		font-family: "Palanquin", Times, serif;
+		font-size: 35px;
+	}
+
+	input[type=text]{
+		width: 100%;
+		height: 40px;
+		border-radius: 25px;
+		margin-bottom: 20px;
+		font-family:"FreeMono", monospace;
+		font-size: 20px;
+	}
+
+	/*input[type=submit]{*/
+	/*.btn{
+		width: 35%;
+		height: 55px;
+		margin-top: 10px;
+		border-radius: 25px;
+		margin-left: 33%;
+		font-family:"FreeMono", monospace;
+		background-color: white;
+		color:  #1abc9c;
+	}*/
+
+	.text{
+		border-radius: 25px;
+		font-family:"FreeMono", monospace;
+		width: 100%;
+		font-size: 20px;
+	}
+
+	h1{
+		font-family:"FreeMono", monospace;
+		color: #1abc9c;
+		text-align: center;
+		font-size: 70px;
+		margin-top: 70px;
+	}
+
+	</style>
+
+
+
+	<!-- the style for the popup -->
+	<style>
+	body {font-family: Arial, Helvetica, sans-serif;}
+
+	/* The Modal (background) */
+	.modal {
+		display: none; /* Hidden by default */
+		position: fixed; /* Stay in place */
+		z-index: 1; /* Sit on top */
+		padding-top: 100px; /* Location of the box */
+		left: 0;
+		top: 0;
+		width: 100%; /* Full width */
+		height: 100%; /* Full height */
+		overflow: auto; /* Enable scroll if needed */
+		background-color: rgb(0,0,0); /* Fallback color */
+		background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	}
+
+	/* Modal Content */
+	.modal-content {
+		background-color: #fefefe;
+		margin: auto;
+		padding: 20px;
+		border: 1px solid #888;
+		width: 80%;
+	}
+
+	.btn{
+		width: 35%;
+		height: 55px;
+		/*margin-top: 10px;*/
+		border-radius: 25px;
+		margin-left: 33%;
+		font-family:"FreeMono", monospace;
+		background-color: white;
+		color:  #1abc9c;
+		/*position:relative;
+		margin-top:560px;*/
+	}
+
+
+	/* The Close Button */
+	.close {
+		color: #aaaaaa;
+		float: right;
+		font-size: 28px;
+		font-weight: bold;
+	}
+	.close:hover,
+	.close:focus {
+		color: #000;
+		text-decoration: none;
+		cursor: pointer;
+	}
+</style>
+
+
 </head>
 <body>
+
+	<div class="story">
+    		<form method="POST">
+    		<h1>Add an offer</h1>
+        	<input type="text" name="subject" placeholder=" subject">
+            <br>
+            <!-- <input type = "text" name = "image" placeholder=" Add the image url here(only jpg and png) :)">
+            <br> -->
+            <textarea rows="10" name="offer_content" cols="54" class="text" placeholder=" Write your offer here!"></textarea>
+        	<br>
+        	<!-- <input id="submit" type="submit" value="share offer"> -->
+
+        	<!-- Trigger/Open The Modal -->
+        	<button id="myBtn" class="btn">Share Offer</button>
+        </form>
+    </div>
+
+    
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+    	<!-- Modal content -->
+    	<div class="modal-content">
+    		<span class="close">&rArr;</span>
+    		<p>Thanks for helping</p>
+    		<a href="offers" class="btn btn-primary">View offers</a>
+    	</div>
+    </div>
+
+    <script>
+    // Get the modal
+    var modal = document.getElementById('myModal');
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks the button, open the modal 
+    btn.onclick = function() {
+    	modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+    	modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+    	if (event.target == modal) {
+    		modal.style.display = "none";
+    	}
+    }
+</script>
+
 
 </body>
 </html>
