the navBar is in all pages and the website is semi ready

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+{% extends "navigationBar.html" %}
+{% block head %} 
 	<title></title>
-	<div w3-include-html="navigationBar.html"></div>
 
-</head>
-<body>
+{% endblock %}
+{% block body %}
 
 	<h1>Home Page</h1>
+
+
+	{% endblock %}
 
 </body>
 </html>
