--- a/templates/read.html
+++ b/templates/read.html
@@ -1,15 +1,161 @@
-<!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+{% extends "navigationBar.html" %}
+{% block head %} 
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
-</head>
-<body>
+	<style>
 
-<h2>Modal Example</h2>
+	@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+body {
+	background: #F17563;
+	font-family: Open Sans;
+	font-size: 14px;
+	color: #222;
+}
+
+label {
+	-webkit-perspective: 1000px;
+	perspective: 1000px;
+	margin-left:170px;
+	margin-top: 200px;
+	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	display: block;
+	width: 300px;
+	height: 300px;
+	/*position: absolute;*/
+	left: 50%;
+	top: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	cursor: pointer;
+
+	
+}
+
+
+.card {
+	/*position: relative;*/
+	height: 100%;
+	width: 100%;
+	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	-webkit-transition: all 600ms;
+	transition: all 600ms;
+	z-index: 20;
+
+
+}
+
+	.card div {
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		background: #FFF;
+		text-align: center;
+		/*line-height: 200px;*/
+		-webkit-backface-visibility: hidden;
+		backface-visibility: hidden;
+		border-radius: 2px;
+	}
+
+	.card .back {
+		background: #222;
+		color: #FFF;
+		-webkit-transform: rotateX(180deg);
+		transform: rotateX(180deg);
+	}
+
+label:hover .card {
+	-webkit-transform: rotateX(20deg);
+	transform: rotateX(20deg);
+	box-shadow: 0 20px 20px rgba(50,50,50,.2);
+}
+
+input {
+	display: none;
+}
+
+:checked + .card {
+	transform: rotateX(180deg);
+	-webkit-transform: rotateX(180deg);
+}
+
+label:hover :checked + .card {
+	transform: rotateX(160deg);
+	-webkit-transform: rotateX(160deg);
+	box-shadow: 0 20px 20px rgba(255,255,255,.2);
+}
+
+.header {
+  background-color: #F1F1F1;
+  text-align: center;
+  padding: 20px;
+}
+
+#movedown{
+	margin-top: 40px;
+}
+
+/*.title{
+	display: flex;
+	flex-direction: row;
+}*/
 
 
 
+	</style>
 
+
+{% endblock %}
+{% block body %}
+
+	<div >
+
+	<div class="header">
+		<h2>STORIES!</h2>
+		<h4>Discover new perspectives</h4>
+	</div>
+
+	
+	<!-- <div class="title"> -->
+
+		<div class="container-fluid text-center">
+			<div class="row">
+				{% for offer in offers %}
+				<div class="col-sm-4">
+					<label>
+						<input type="checkbox"  />
+						<div class="card">
+							<div class="front">
+								<h4 >{{offer.subject}}</h4>
+								
+							</div>
+							<div class="back">
+								<p id="movedown">{{offer.content}}</p>
+								<h3>{{user.PhoneNum}}</h3>
+								
+							</div>
+						</div>
+					</label>
+				</div>
+				{% endfor %}
+			</div>
+		</div>
+	<!-- </div> -->
+
+
+
+{% endblock %}
 </body>
 </html>
+
+<!-- <span class="glyphicon glyphicon-leaf"></span> -->
+
