--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,45 @@
 <html>
 <head>
 
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
+
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<style>
+	a {
+		text-decoration: none;
+		display: inline-block;
+		padding: 8px 16px;
+	}
+
+	a:hover {
+		background-color: #ddd;
+		color: black;
+	}
+
+	.next {
+		margin-top: 20px;
+		margin-left: 20px;
+		/*width: 60px;
+		height: 60px;*/
+		background-color: #4CAF50;
+		color: white;
+		/*border-radius: 50%;*/
+		text-align: center;
+		font-size: 20px;
+	}
+
+	/*.arrow{
+		margin-right: 20px;
+	}*/
+	</style>
+	
+
+
+
 	<style>
 	.Login{
 		position: relative;
@@ -87,6 +126,9 @@
 
 </head>
 <body>
+
+	<a href="/" class="next "> Go Back! </a>
+	<!-- <span class="glyphicon glyphicon-backward" ></span> -->
 
 
 <div class="Login">
