--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -3,6 +3,39 @@
 <head>
 
 	<style>
+	a {
+		text-decoration: none;
+		display: inline-block;
+		padding: 8px 16px;
+	}
+
+	a:hover {
+		background-color: #ddd;
+		color: black;
+	}
+
+	.next {
+		position: absolute;
+		left:-400px;
+		top: 5px;
+		/*margin-top: 0px;*/
+		/*margin-left: 20px;*/
+		/*width: 200px;
+		height: 70px;*/
+		background-color: #4CAF50;
+		color: white;
+		/*border: bold ;*/
+		text-align: center;
+		font-size: 20px;
+	}
+
+	</style>
+
+
+
+
+
+	<style>
 
 	.story{
 		position: absolute;
@@ -161,6 +194,11 @@
 
 </head>
 <body>
+
+
+	
+		<a href="/" class="next"> Go Back! </span></a>
+	
 
 	<div class="signUp">
 
