--- a/templates/post.html
+++ b/templates/post.html
@@ -100,6 +100,7 @@
 		/*margin-top: 10px;*/
 		border-radius: 25px;
 		margin-left: 33%;
+		margin-top: 10px;
 		font-family:"FreeMono", monospace;
 		background-color: white;
 		color:  #1abc9c;
@@ -128,7 +129,7 @@
 {% block body %}
 
 	<div class="story">
-    		<form method="POST">
+    		<form action = "add_offer" method="POST">
     		<h1>Add an offer</h1>
         	<input type="text" name="subject" placeholder=" subject">
             <br>
