--- a/templates/read.html
+++ b/templates/read.html
@@ -2,6 +2,7 @@
 {% extends "navigationBar.html" %}
 {% block head %} 
 
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -14,7 +15,7 @@
 	@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 body {
-	background: #F17563;
+	background: #33967d;
 	font-family: Open Sans;
 	font-size: 14px;
 	color: #222;
@@ -50,6 +51,8 @@ label {
 	-webkit-transition: all 600ms;
 	transition: all 600ms;
 	z-index: 20;
+	background: #b8cddb
+	/*background-image: url("background.jpg");*/
 
 
 }
@@ -58,8 +61,10 @@ label {
 		position: absolute;
 		height: 100%;
 		width: 100%;
-		background: #FFF;
+		background: #9cba60;
+		/*background-image: url("background.jpg");*/
 		text-align: center;
+		color:#FFF;
 		/*line-height: 200px;*/
 		-webkit-backface-visibility: hidden;
 		backface-visibility: hidden;
@@ -95,12 +100,12 @@ label:hover :checked + .card {
 }
 
 .header {
-  background-color: #F1F1F1;
+  background-color: #d6d6d4 ;
   text-align: center;
-  padding: 20px;
+  padding: 5px;
 }
 
-p.content{
+.content{
 	font-weight: normal;
 	font-style: oblique;
 	font-size: 30px;
@@ -109,6 +114,17 @@ p.content{
 	width:100%;
 	text-align: center
 	
+}
+.subject{
+	text-align: center
+	font-weight: 600;
+	font-style: italic;
+	font-size: 50px;
+	position: fixed;
+	bottom: 40%;
+	width:100%;
+	
+
 }
 
 /*.title{
@@ -125,6 +141,17 @@ p.cell{
 	
 	/*position: static;
 	bottom: 10px;*/
+}
+
+.title{
+	text-align: center
+	font-weight: bold;
+	font-style: oblique;
+	font-size: 55px;
+	position: fixed;
+	bottom: 70%;
+	width:100%;
+
 }
 
 
@@ -154,7 +181,8 @@ p.cell{
 						<input type="checkbox"  />
 						<div class="card">
 							<div class="front">
-								<h4 >{{offer.subject}}</h4>
+								<h4 class="title">Subject:</h4>
+								<h5 class="subject">{{offer.subject}}</h5>
 								
 							</div>
 							<div class="back">
