--- a/templates/login.html
+++ b/templates/login.html
@@ -134,10 +134,10 @@
 <div class="Login">
 	<form method="POST">
 		<h1>LOGIN</h1>
-		<input type="text" name="name" placeholder="Full Name">
+		<input type="text" name="name" required="" placeholder="Full Name">
 			<br>
 			<br>
-			<input type="password" name="password" placeholder="Password">
+			<input type="password" name="password" required="" placeholder="Password">
 			<br>
 			<br>
 			<br>
