--- a/templates/post.html
+++ b/templates/post.html
@@ -10,7 +10,45 @@
 
 	
 
-	<!-- the style for the whole page -->
+	
+<!-- the style of the date picker -->
+	<style>
+	[type="date"] {
+		background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
+		margin-left: 10px;
+	}
+	[type="date"]::-webkit-inner-spin-button {
+		display: none;
+	}
+	[type="date"]::-webkit-calendar-picker-indicator {
+		opacity: 0;
+	}
+	/* custom styles */
+	/*body {
+		padding: 4em;
+		background: #e5e5e5;
+		font: 13px/1.4 Geneva, 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', Verdana,sans-serif;
+	}*/
+	label {
+		display: block;
+		font-size: 16px;
+		font-weight: bold;
+	}
+	input {
+		border: 1px solid #c4c4c4;
+		border-radius: 7px;
+		background-color: #fff;
+		padding: 3px 5px;
+		margin-bottom: 10px;
+		/*padding-left: 40px;*/
+		box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
+		width: 190px;
+		height: 35px;
+		font-size: 20px;
+	}
+</style>
+
+<!-- the style for the whole page -->
 	<style>
 
 	body{
@@ -131,29 +169,44 @@
 	<div class="story">
     		<form action = "add_offer" method="POST">
     		<h1>Add an offer</h1>
-        	<input type="text" name="subject" placeholder=" subject">
-            <br>
-            <!-- <input type = "text" name = "image" placeholder=" Add the image url here(only jpg and png) :)">
-            <br> -->
-            <textarea rows="10" name="offer_content" cols="54" class="text" placeholder=" Write your offer here!"></textarea>
+        	<input type="text" name="subject" required="" placeholder=" subject">
+            <!-- <br> -->
+            <label for="date" required="">Possible Meeting Date:</label>
+            <input type="date" name="date" required="" id="date">
+            <!-- <input type = "text" name = "image" placeholder=" Add the image url here(only jpg and png) :)"> -->
+            <!-- <br> -->
+            <textarea rows="10" name="offer_content" cols="54" class="text" required="" placeholder=" Write your offer here!"></textarea>
         	<br>
         	<!-- <input id="submit" type="submit" value="share offer"> -->
 
         	<!-- Trigger/Open The Modal -->
-        	<button id="myBtn" class="btn">Share Offer</button>
-        </form>
-    </div>
 
-    
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
+
+
+        	<div id="myModal" class="modal">
     	<!-- Modal content -->
     	<div class="modal-content">
     		<span class="close">&rArr;</span>
     		<p>Thanks for helping</p>
-    		<a href="offers" class="btn btn-primary">View offers</a>
+    		<button  class="btn">Share Offer</button>
+    		
     	</div>
     </div>
+        </form>
+        <a id="myBtn"  class="btn btn-primary">View offers</a>
+        <!-- href="offers"	 -->
+    </div>
+
+    
+    <!-- The Modal -->
+    <!-- <div id="myModal" class="modal"> -->
+    	<!-- Modal content -->
+    	<!-- <div class="modal-content">
+    		<span class="close">&rArr;</span>
+    		<p>Thanks for helping</p>
+    		<a href="offers" class="btn btn-primary">View offers</a>
+    	</div>
+    </div> -->
 
     <script>
     // Get the modal
