--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -204,15 +204,15 @@
 
 		<form method="POST">
 			<h1>Sign-Up</h1>
-        	<input type="text" name="name" placeholder="Full Name">
-        	<input type="password" name="password" placeholder="Password">
-        	<input type="text" name="email" placeholder="E-mail">
-        	<input id="ph" type="text" name="phone" placeholder="Phone Number">
+        	<input type="text" name="name" required="" placeholder="Full Name">
+        	<input type="password" name="password" required="" placeholder="Password">
+        	<input type="text" name="email" required="" placeholder="E-mail">
+        	<input id="ph" type="text" name="phone" required="" placeholder="Phone Number">
         	<br>
 
 
         	<h4>What is your status?</h4>
-        	<input  id="mentor" type="radio" name="status" value="Mentor">Mentor
+        	<input  id="mentor" type="radio" name="status"  value="Mentor">Mentor
             <br>
         	<input  id="student" type="radio" name="status" value="Student">Student
             <br>
