--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,9 @@
 
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="static/css/login.css">
+	<link rel="shortcut icon" type="image/png" href="../static/back-2.jpg"/>
+	
 	<style>
 	a {
 		text-decoration: none;
@@ -26,11 +29,29 @@
 		margin-left: 20px;
 		/*width: 60px;
 		height: 60px;*/
-		background-color: #4CAF50;
+		background-color: #ddb399;
 		color: white;
 		/*border-radius: 50%;*/
 		text-align: center;
 		font-size: 20px;
+	}
+
+	.next1 {
+		margin-top: 20px;
+		margin-left: -110px;
+		width: 15%;
+		position: fixed;
+		bottom: 30px;
+		/*width: 60px;
+		height: 60px;*/
+		background-color: white;
+		border-radius: 5%;
+		color: black;
+		/*border-radius: 50%;*/
+		text-align: center;
+		font-size: 15px;
+		font-style: italic;
+		height: 20px;
 	}
 
 	/*.arrow{
@@ -47,6 +68,7 @@
 		left: 25%;
 		width:51%;
 		padding: 0;
+		padding-bottom: 20px;
 		margin: 0;
 		border-style: solid;
     	border-width: 3px;
@@ -56,16 +78,20 @@
 
     body{
     	margin-top: 0px;
-		background-color: #2f2f1e;
+    	/*background-image: url("back-2.jpg");*/
+    	/*background-image: url("back-2.jpg");*/
+		/*background-color: #2f2f1e;*/
 		/*background-image: url("dark.jpg"); */
 		background-repeat: no-repeat;
 		background-size : 1400px 790px;
+
 	}
 
 	input[type=text]{
 		position: relative;
 		width: 50%;
-		height: 60px;	
+		height: 60px;
+		color: black;	
 		text-align: center;
 		left :25%;
 		background-color:white;
@@ -77,6 +103,7 @@
 		position: relative;
 		width: 50%;
 		height: 60px;
+		color: black;
 		text-align: center;
 		left :25%;
 		background-color:white;
@@ -89,6 +116,7 @@
 		position: relative;
 		width: 35%;
 		height: 40px;
+		color: black;
 		text-align: center;
 		left :33%;
 		font-family:"FreeMono", monospace;
@@ -96,11 +124,11 @@
 
 	h1{
 		position: relative;
-		color: #1abc9c ;
+		color: #af4c0e ;
 		text-align: center;
 		font-size: 90px;
 		font-family:"FreeMono", monospace;
-		font-weight: 300
+		font-weight: bold;
 	}
 
 	@media only screen and (min-width: 1101px) {
@@ -121,11 +149,23 @@
 
 	}
 
+	.at {
+		text-decoration: none;
+		display: inline-block;
+		padding: 8px 16px;
+	}
 
+	.at:hover {
+		background-color: #ddd;
+		color: black;
+	}
+	
+    
 	</style>
 
 </head>
 <body>
+
 
 	<a href="/" class="next "> Go Back! </a>
 	<!-- <span class="glyphicon glyphicon-backward" ></span> -->
@@ -143,10 +183,19 @@
 			<br>
 		
 			<input type="submit" value="LOGIN">
+
 			<br>
 			<br>
 			<br>
 		</form>
+		<!-- <div class="at"> -->
+			<center>
+				<a href="/signup" class="next1" >Sign Up</a>
+			</center>
+			
+		<!-- </div> -->
+		
+
 		</div>
 </body>
 </html>
