--- a/templates/navigationBar.html
+++ b/templates/navigationBar.html
@@ -6,6 +6,8 @@
 
     <style>
     ul {
+        position: fixed;
+        width: 100%;
         list-style-type: none;
         margin: 0;
         padding: 0;
