--- a/templates/post.html
+++ b/templates/post.html
@@ -34,8 +34,15 @@
 	}*/
 	label {
 		display: block;
-		font-size: 16px;
+		font-size: 18px;
 		font-weight: bold;
+		font-family:"FreeMono", monospace;
+		color: white;
+		background-color: rgba(30, 30, 30, 0.5);
+		width: 260px;
+		border-style: solid;
+    	border-width: 1px;
+    	border-radius: 4%;
 	}
 	input {
 		border: 1px solid #c4c4c4;
@@ -183,7 +190,7 @@
     		<h1>Add an offer</h1>
         	<input type="text" name="subject" required="" placeholder=" subject">
             <!-- <br> -->
-            <label for="date" required="">Possible Meeting Date:</label>
+            <label for="date" required="">  Possible Meeting Date:</label>
             <input type="date" name="date" required="" id="date">
             <!-- <input type = "text" name = "image" placeholder=" Add the image url here(only jpg and png) :)"> -->
             <!-- <br> -->
