--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -228,9 +228,8 @@
             <br>
         	<input  id="student" type="radio" name="status" value="Student"><label for="status">Student</label>
             <br>
-            <input type="radio" name="status" value="Other"><label for="status">Other:</label>
-            <br>
-            <input type="text" name="status" placeholder="" id="other">
+            <input type="radio" name="status" value="Other"><label for="status">Other:
+            </label> <input type="text" name="status" placeholder="" id="other">
         	<br>
             <br>
       		<input type="submit" value="SignUp">
