--- a/static/css/home.css
+++ b/static/css/home.css
@@ -9,8 +9,12 @@ body{
 
 img{
 	/*margin-top: 2px;*/
+	margin-top: 40px;
 	width: 100%;
 	height: 75%;
+	border-bottom: solid;
+	border-width: 3px;
+	/*border-color: white;*/
 }
 
 .border{
