--- a/templates/home.html
+++ b/templates/home.html
@@ -19,24 +19,25 @@
 <center> <img src="static/bg.jpg" alt="background"> </center>
 
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-	<h2 class="w3-wide">THE BAND</h2>
-	<p class="w3-opacity"><i>We love music</i></p>
-	<p class="w3-justify">We have created a fictional band website. </p>
+	<h2 class="w3-wide">HOFFER</h2>
+	<center><p class="w3-opacity"><i>"Failure is success if we learn from it"</i></p>
+	<p class="w3-justify">This websit was created in order to help palestinian college students in their high educations in the Hebrew speaking universities after the results of a recent research that has been held that shows the difficulty Palestinians face as a result of not getting the education in their mother-tongue in this multilingual state, Isreal.
+</p></center>
 </div>
 
 <center>
 <div class="border">
 <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
     <h2 class="w3-wide w3-center">CONTACT</h2>
-    <p class="w3-opacity w3-center"><i>Fan? Drop a note!</i></p>
+    <p class="w3-opacity w3-center"><i>Something to tell us? Drop a note!</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker" style="width:30px"></i> Nazareth, Palestine <br>
+        <i class="fa fa-map-marker" style="width:30px; "></i> Nazareth, Palestine <br>
         <i class="fa fa-phone" style="width:30px"></i> Phone: 0524866822 <br>
         <i class="fa fa-envelope" style="width:30px"> </i> Email:waseem@gmal.com<br>
       </div>
       <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
+        <form >
           <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
             <div class="w3-half">
               <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
