--- a/templates/login.html
+++ b/templates/login.html
@@ -44,13 +44,13 @@
 		bottom: 30px;
 		/*width: 60px;
 		height: 60px;*/
-		background-color: white;
+		background-color: #e7e7e7;
 		border-radius: 5%;
 		color: black;
 		/*border-radius: 50%;*/
 		text-align: center;
 		font-size: 15px;
-		font-style: italic;
+		font-style: "Courier New", Courier, monospace;
 		height: 20px;
 	}
 
