--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
 	<h2 class="w3-wide">HOFFER</h2>
 	<center><p class="w3-opacity"><i>"Failure is success if we learn from it"</i></p>
-	<p class="w3-justify">This websit was created in order to help palestinian college students in their high educations in the Hebrew speaking universities after the results of a recent research that has been held that shows the difficulty Palestinians face as a result of not getting the education in their mother-tongue in this multilingual state, Isreal.
+	<p class="w3-justify">This websit was created in order to help palestinian college students in their high education in the Hebrew speaking universities after the results of a recent research that has been held that shows the difficulty Palestinians face as a result of not getting the education in their mother-tongue in this multilingual state, Israel.
 </p></center>
 </div>
 
