--- a/templates/login.html
+++ b/templates/login.html
@@ -38,19 +38,21 @@
 
 	.next1 {
 		margin-top: 20px;
-		margin-left: -110px;
-		width: 15%;
-		position: fixed;
-		bottom: 30px;
+		margin-left: 10px;
+		width: 30%;
+		position: relative;
+		bottom: 40px;
 		/*width: 60px;
 		height: 60px;*/
 		background-color: #e7e7e7;
-		border-radius: 5%;
+		/*border-radius: 5%;*/
 		color: black;
+		font-weight: normal;
 		/*border-radius: 50%;*/
 		text-align: center;
 		font-size: 15px;
-		font-style: "Courier New", Courier, monospace;
+		/*font-style: "Courier New", Courier, monospace;*/
+		font-family:"FreeMono", monospace;
 		height: 20px;
 	}
 
