just fixing little things

--- a/templates/read.html
+++ b/templates/read.html
@@ -219,7 +219,7 @@ h3{
 
 
 		{% if offers == [] %}
-			<h3>no posts yet</h3>
+			<h3>No offers yet</h3>
 		{% endif %}
 	
 	<!-- <div class="title"> -->
