--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>SignUp</title>
 
 
 	<link rel="shortcut icon" type="image/png" href="../static/back-3.jpg"/>
