--- a/templates/read.html
+++ b/templates/read.html
@@ -187,7 +187,7 @@ p.cell{
 }
 
 h3{
-	position: fixed;
+	position: absolute;
 	bottom: 50%;
 	left: 40%;
 	color: black;
@@ -220,7 +220,7 @@ h3{
 
 
 		{% if offers == [] %}
-			<h3>No offers yet</h3>
+			<h3>No offers yet!</h3>
 		{% endif %}
 	
 	<!-- <div class="title"> -->
