--- a/templates/read.html
+++ b/templates/read.html
@@ -220,7 +220,7 @@ h3{
 
 
 		{% if offers == [] %}
-			<h3>No offers yet!</h3>
+			<h3>No offers yet</h3>
 		{% endif %}
 	
 	<!-- <div class="title"> -->
