--- a/templates/post.html
+++ b/templates/post.html
@@ -3,6 +3,7 @@
 {% block head %} 
 
 	<title>Post an Offer</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
