--- a/templates/navigationBar.html
+++ b/templates/navigationBar.html
@@ -4,6 +4,8 @@
 
     {% block head %}{% endblock %}
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
     ul {
         position: fixed;
