--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -3,6 +3,8 @@
 <head>
 	<title>SignUp</title>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 	<link rel="shortcut icon" type="image/png" href="../static/back-3.jpg"/>
 
