--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -54,9 +54,9 @@
 
 	.signUp{
 		position: absolute;
-    	margin-left:28%;
+    	margin-left:29%;
     	top: 3%;
-    	width: 40%;
+    	width: 39%;
 		border-color:black;
 		border-radius:25px;
 		font-family:"FreeMono", monospace;
@@ -207,6 +207,88 @@
 
 	</style>
 
+
+	<style>
+#message {
+  display:none;
+  /*background: #f1f1f1;*/
+  background-color: rgba(30, 30, 30, 0.8);
+  color: #000;
+  border-color: #000;
+  /*position: relative;
+  padding: 20px;
+  margin-top: 10px;*/
+  position: absolute;
+  margin-left: 100px;
+  margin-top: 90px;
+  padding-left: 10px;
+  width: 20%;
+  height: 39%;
+
+}
+
+
+
+.speech-bubble { 
+	position: relative;
+	background: #f1f1f1; 
+	border-radius: .4em;
+
+	}
+
+	.speech-bubble:after {
+		content: '';
+		position: absolute;
+		right: 0;
+		top: 50%;
+		width: 0;
+		height: 0;
+		border: 38px solid transparent;
+		border-left-color: #f1f1f1;
+		border-right: 0;
+		margin-top: -38px;
+		margin-right: -38px;
+	}
+
+h5{
+	color: #000;
+	font-size: 20px;
+	text-align: center;
+}
+
+
+
+
+#message p {
+  padding: 5px 35px;
+  font-size: 11px;
+  font-weight: bold;
+}
+
+/* Add a green text color and a checkmark when the requirements are right */
+.valid {
+  color: green;
+}
+
+.valid:before {
+  position: relative;
+  left: -35px;
+  content: "✔";
+  font-weight: bold;
+}
+
+/* Add a red text color and an "x" when the requirements are wrong */
+.invalid {
+  color: #db2525;
+}
+
+.invalid:before {
+  position: relative;
+  left: -35px;
+  content: "✖";
+}
+	</style>
+
 </head>
 <body>
 
@@ -220,7 +302,7 @@
 		<form method="POST">
 			<h1>Sign-Up</h1>
         	<input type="text" name="name" required="" placeholder="Full Name">
-        	<input type="password" name="password" required="" placeholder="Password">
+        	<input type="password" name="password" id="psw"  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"  required="" placeholder="Password">
         	<input type="text" name="email" required="" placeholder="E-mail">
         	<input id="ph" type="text" name="phone" required="" placeholder="Phone Number">
         	<br>
@@ -238,6 +320,75 @@
       		<input type="submit" value="SignUp">
         </form>
     </div>
+
+    <div id="message" class="speech-bubble">
+  <h5>Password must contain the following:</h5>
+  <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+  <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+  <p id="number" class="invalid">A <b>number</b></p>
+  <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+</div>
+				
+<script>
+var myInput = document.getElementById("psw");
+var letter = document.getElementById("letter");
+var capital = document.getElementById("capital");
+var number = document.getElementById("number");
+var length = document.getElementById("length");
+
+// When the user clicks on the password field, show the message box
+myInput.onfocus = function() {
+  document.getElementById("message").style.display = "block";
+}
+
+// When the user clicks outside of the password field, hide the message box
+myInput.onblur = function() {
+  document.getElementById("message").style.display = "none";
+}
+
+// When the user starts to type something inside the password field
+myInput.onkeyup = function() {
+  // Validate lowercase letters
+  var lowerCaseLetters = /[a-z]/g;
+  if(myInput.value.match(lowerCaseLetters)) {  
+    letter.classList.remove("invalid");
+    letter.classList.add("valid");
+  } else {
+    letter.classList.remove("valid");
+    letter.classList.add("invalid");
+  }
+  
+  // Validate capital letters
+  var upperCaseLetters = /[A-Z]/g;
+  if(myInput.value.match(upperCaseLetters)) {  
+    capital.classList.remove("invalid");
+    capital.classList.add("valid");
+  } else {
+    capital.classList.remove("valid");
+    capital.classList.add("invalid");
+  }
+
+  // Validate numbers
+  var numbers = /[0-9]/g;
+  if(myInput.value.match(numbers)) {  
+    number.classList.remove("invalid");
+    number.classList.add("valid");
+  } else {
+    number.classList.remove("valid");
+    number.classList.add("invalid");
+  }
+  
+  // Validate length
+  if(myInput.value.length >= 8) {
+    length.classList.remove("invalid");
+    length.classList.add("valid");
+  } else {
+    length.classList.remove("valid");
+    length.classList.add("invalid");
+  }
+}
+</script>
+
 
 </body>
 </html>
