--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -268,6 +268,7 @@ h5{
 /* Add a green text color and a checkmark when the requirements are right */
 .valid {
   color: green;
+  font-weight: bold;
 }
 
 .valid:before {
@@ -280,12 +281,14 @@ h5{
 /* Add a red text color and an "x" when the requirements are wrong */
 .invalid {
   color: #db2525;
+  font-weight: bold;
 }
 
 .invalid:before {
   position: relative;
   left: -35px;
   content: "✖";
+  font-weight: bold;
 }
 	</style>
 
