--- a/templates/home.html
+++ b/templates/home.html
@@ -49,7 +49,7 @@
             </div>
           </div>
           <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-          <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
+          <a href="mailto:waseem.meet.edu@gmail.com" class="w3-button w3-black w3-section w3-right"  type="submit">SEND</a>
         </form>
       </div>
     </div>
@@ -58,6 +58,7 @@
 
 
 	{% endblock %}
+	
 
 </body>
 </html>
