--- a/templates/post.html
+++ b/templates/post.html
@@ -197,7 +197,8 @@
             <input type="date" name="date" required="" id="date">
             <!-- <input type = "text" name = "image" placeholder=" Add the image url here(only jpg and png) :)"> -->
             <!-- <br> -->
-            <textarea rows="10" name="offer_content" cols="54"  class="text" required="" placeholder=" Write your offer here!"></textarea>
+            <textarea rows="10" name="offer_content" cols="54"  class="text" style="white-space: pre-line;" wrap="hard" required="" placeholder=" Write your offer here!">
+            </textarea>
         	<br>
         	<!-- <input id="submit" type="submit" value="share offer"> -->
 
