--- a/templates/about.html
+++ b/templates/about.html
@@ -89,10 +89,10 @@ h3 {
 
 <style>
 .myDIV {
-  width: 45%;
-  height: 240px;
+  width: 60%;
+  height: 330px;
   padding: 30px 0;
-  margin-left: 27%;
+  margin-left: 22%;
   margin-top: 5px;
   /*text-align: center;*/
   background-color: #998575;
@@ -101,10 +101,10 @@ h3 {
 }
 
 .myDIV1 {
-  width: 45%;
-  height: 190px;
+  width: 60%;
+  height: 250px;
   padding: 30px 0;
-  margin-left: 27%;
+  margin-left: 22%;
   margin-top: 5px;
   /*text-align: center;*/
   /*position: absolute;*/
@@ -115,6 +115,8 @@ h3 {
 }
 .btn{
   width: 20%;
+  height: 10%;
+  font-size: 25px;
   margin-top:14px;
 
 }
@@ -126,21 +128,22 @@ h3 {
 
 .how{
   background-color: #CDCDCD;
+  /*height: 510px;*/
   margin-top: 30px;
   padding-bottom: 50px;
   padding-top: 30px;
 }
 .student{
   position: absolute;
-  left: 33%;
-  font-size: 18px;
+  left: 28%;
+  font-size: 28px;
   /*font-weight: bold;*/
   color: black;
 }
 .Teacher{
   position: absolute;
-  left: 33%;
-  font-size: 18px;
+  left: 28%;
+  font-size: 28px;
   /*font-weight: bold;*/
   color: black;
 
@@ -218,6 +221,21 @@ h4{
   text-decoration: none;
 }
 
+.go{
+  font-weight: bold;
+  font-size: 28px;
+  font-style: italic;
+  color: black;
+}
+.go:hover{
+  font-style: normal;
+  font-size: 29px;
+  box-shadow: 0 0 11px rgba(33,33,33,.2);
+  text-decoration: none;
+  /*background-color: #4f4238;*/
+  color: #151918;
+}
+
 
 </style>
 
@@ -276,10 +294,10 @@ h4{
 
   <h4>How to use the Website?</h4>
 
-  <h4>Student Or a Mentor :</h4>
+  {% if session['status']== 'Mentor' %}
 
 <center>
-<button class="btn" onclick="myFunction()">Mentor</button>
+<button class="btn" onclick="myFunction()">Click Here to see</button>
 </center>
 
 
@@ -294,15 +312,20 @@ h4{
     <br>
     <span class="glyphicon glyphicon-circle-arrow-right"></span>Choose a suitable date for the meeting
     <br>
-    <span class="glyphicon glyphicon-circle-arrow-right"></span>Write and share your Offer
+    <span class="glyphicon glyphicon-circle-arrow-right"></span>
+    <a class="go" href="{{ url_for('add_offers_route') }}">Write and share your Offer </a>
     <br>
     <span class="glyphicon glyphicon-circle-arrow-right"></span>Wait for Stuents to Contact you on your number
     <br>
     <span class="glyphicon glyphicon-circle-arrow-right"></span>SPREAD HELP!
     </p>
 </div>
+
+  {% endif %}
+
+{% if session['status']== 'Student' %}
 <center>
-<button class="btn" onclick="myFunction1()">Student</button>
+<button class="btn" onclick="myFunction1()">Click Here to see</button>
 </center>
 
 <div id="myDIV1" class="myDIV1">
@@ -311,13 +334,15 @@ h4{
     <br>
     <span class="glyphicon glyphicon-circle-arrow-right"></span>Read about the purpose of the website
     <br>
-    <span class="glyphicon glyphicon-circle-arrow-right"></span>View Offers form Mentors
+    <span class="glyphicon glyphicon-circle-arrow-right"></span>
+    <a class="go" href="{{ url_for('offers_page') }}">View Offers form Mentors</a>
     <br>
     <span class="glyphicon glyphicon-circle-arrow-right"></span>Contact the Mentor who you want to get help from
     <br>
     <span class="glyphicon glyphicon-circle-arrow-right"></span>SUCCEED!
     </p>
 </div>
+{% endif %}
 
 </div>
 
