--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,8 @@
 {% extends "navigationBar.html" %}
 {% block head %} 
 
+<title>About Us</title>
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
